test/e2e/chainsaw/hybridgateway/basic-httproute/01-httpRoute-echo.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: (join('-', [($test_name), 'echo-route']))
  namespace: ($namespace)
  labels:
    chainsaw/test: ($test_name)
spec:
  hostnames: ($route_hosts)
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /echo
      backendRefs:
        - name: (join('-', [($test_name), 'echo']))
          port: 1027
